--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
   integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-  <link href="jquery.js">
   <link rel="stylesheet" type="text/css" href="styles.css">
   <title>Local Weather</title>
 </head>
@@ -20,19 +19,20 @@
         <h1>Current Weather</h1>
       </div>
       <div class="col-md-6 offset-md-3">
-        <h2 class="location">Location</h2>
+        <h2 class="location"></h2>
       </div>
       <div class="col-md-6 offset-md-3">
-        <h3 class="temperature">Temp <a class="measurement" href="#">Farenheit</a></h3>
+        <h3 class="temperature"><a class="measurement" href="#">Farenheit</a></h3>  <!--need to fix so farenheit shows up, may need to restyle-->
       </div>
       <div class="col-md-6 offset-md-3">
-        <h3 class="description">Description</h3>
+        <h3 class="description"></h3>
       </div>
       <div class="col-md-2 offset-md-5">
         <i class="fas fa-sun"></i>
       </div>
     </div>
   </div>
+  <script src="jquery.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
