--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       <div class="col-md-6 offset-md-3">
         <h2 class="location"></h2>
       </div>
-      <div class="col-md-6 offset-md-3">
-        <h3 class="temperature"><a class="measurement" href="#">Farenheit</a></h3>  <!--need to fix so farenheit shows up, may need to restyle-->
+      <div class="col-md-6 offset-md-3 temp-div">
+        <h3 class="temperature"></h3><a class="measurement" href="#">Farenheit</a>
       </div>
       <div class="col-md-6 offset-md-3">
         <h3 class="description"></h3>
       </div>
       <div class="col-md-2 offset-md-5">
-        <i class="fas fa-sun"></i>
+        <i id="icon" class="fas animation-icon"></i>
       </div>
     </div>
   </div>
